updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a freelance realtime captioner with four kids and a messy house.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Southern California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Boy Scouts, Cooking, Walking on the beach, Candy Crush</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>DPark Ranger or Kayak Guide - if either paid well</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Hilton Head, SC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want a job where I have to think for myself again.</p>
     </section>
 
     <footer id="footer">
