fixing my details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Boy Scouts, Cooking, Walking on the beach, Candy Crush</p>
       <h1>What's your dream job?</h1>
-      <p>DPark Ranger or Kayak Guide - if either paid well</p>
+      <p>Park Ranger or Kayak Guide - if either paid well</p>
       <h1>Where do you live?</h1>
       <p>Hilton Head, SC</p>
       <h1>Why do you want to be a web developer?</h1>
